--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -2,14 +2,27 @@
   margin-bottom: 2rem;
   
   .cover {
+    position: relative;
     padding: 70% 25px 0 25px;
     background: {
       color: #f4f5f7;
       size: cover;
       position: center;
     }
+    overflow: hidden;
+    align-items: flex-end;
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      max-width: 100%;
+      height: auto;
+      object-fit: fill;
+    }
 
     .details {
+      position: relative;
       padding: 15px 20px;
       display: flex;
       background-color: #ffffff;
