--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -52,7 +52,12 @@
     }
   }
 
-  &:hover .post-info h5{
-    color: $primary;
+  &:hover .post-info {
+    h5 {
+      color: $primary;
+    }
+    .more .btn-main {
+      background-color: $primary;
+    }
   }
 }
