--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -33,4 +33,13 @@
     background-color: #2a2a2a;
     color: #ffffff;
   }
+
+  &:active {
+    background-color: $primary;
+    border: 1px solid $primary;
+  } 
+  
+  &.active {
+    background-color: $primary;
+  }
 }
