--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -6,12 +6,14 @@
   .photo {
     position: relative;
     padding: 80% 10px 0 10px;
+
     background: {
       color: #f4f5f7;
       size: contain;
       position: center;
       repeat: no-repeat;
     }
+
     overflow: hidden;
     align-items: flex-end;
 
@@ -33,16 +35,17 @@
     }
 
 
-    }
-    &:hover {
-      
-      .buttons {
-      visibility: visible;
-      }
+  }
 
-      .price .btn-main-small {
-        background-color: $primary;
-      }
+  &:hover {
+
+    .buttons {
+      visibility: visible;
+    }
+
+    .price-button {
+      background-color: $primary;
+    }
   }
 
   .content {
@@ -59,7 +62,7 @@
     .stars {
       a {
         text-decoration: none;
-        color: rgb(42,42,42);
+        color: rgb(42, 42, 42);
         @extend .far;
         @extend .fa-star;
 
