--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,3 +9,6 @@ $primary: #d58e32;
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+
+$old-price-line:#000000;
+$old-price-bg:rgb(189, 189, 189);
