--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,6 +6,10 @@ $footer-bg: #363636;
 
 $primary: #d58e32;
 
+$total-white: #ffffff;
+
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+
+$grey-rgb-103:rgb(103,103,103);
