--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -29,8 +29,8 @@
       position: relative;
       padding: 15px 20px;
       display: flex;
-      color: #000000;
-      background-color: #ffffff;
+      color: $text-color;
+      background-color: $total-white;
       font-size: 14px;
 
       & > * {
@@ -51,7 +51,7 @@
     padding: 25px;
 
     h5 {
-      color: rgb(103,103,103);
+      color: $grey-rgb-103;
       font-size: 16px;
       line-height: 24px;
       letter-spacing: 1px;
@@ -60,7 +60,7 @@
     p {
       font-size: 14px;
       line-height: 24px;
-      color: rgb(103,103,103);
+      color: $grey-rgb-103;
       text-align: justify;
     }
 
