--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -145,16 +145,14 @@ header {
             border-top: 4px solid #ffffff;
             font-weight: 500;
             letter-spacing: 1px;
+            outline: 0; 
 
             &:hover,
-            &.active {
+            &.active,
+            &:focus {
               background-color: $primary;
-              color: #ffffff;
-              border-color: $primary;
-            }
-
-            &.active {
-              border-color: $text-color;
+              color: $active-menu-color;
+              border-top: 4px solid $text-color;
             }
           }
         }
