Add global class for hover animation transition period, used in all hovers except ".panel-bar>.menu>ul>li>a"

--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -8,6 +8,7 @@
     transform: translateY(-50%);
 
     i {
+      @extend .hover-animation;
       width: 60px;
       height: 60px;
       border-radius: 100%;
@@ -35,6 +36,7 @@
   }
 
   .content {
+    @extend .hover-animation;
     text-transform: uppercase;
     color: rgb(42,42,42);
     margin-top: -0.5rem;
