--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn-main {
+  @extend .hover-animation;
   background-color: #2a2a2a;
   color: #ffffff;
   font-size: 16px;
@@ -22,6 +23,7 @@
 }
 
 .btn-outline {
+  @extend .hover-animation;
   display: inline-block;
   padding: 5px 10px;
   border: 1px solid #2a2a2a;
