WDP181002-10 Created drop-down horizontal menu

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -126,6 +126,7 @@ header {
     .menu {
       display: flex;
       align-self: stretch;
+      z-index: 2;
 
       ul {
         margin: 0;
@@ -134,8 +135,25 @@ header {
 
         li {
           list-style: none;
-          display: flex;
           align-items: stretch;
+          display:inline-block;
+          position:relative;
+
+          ul {
+            display:block;
+            display:none;
+            position:absolute;
+            width:100%;
+
+            li {
+              display:block;
+              background-color: $primary;
+            }
+          }
+
+          &:hover ul {
+            display:block;
+          }
 
           a {
             @extend .hover-animation;
@@ -146,10 +164,11 @@ header {
             text-decoration: none;
             display: flex;
             align-items: center;
-            border-top: 4px solid #ffffff;
+            border-top: 4px solid $menu-border-top-color;
             font-weight: 500;
             letter-spacing: 1px;
-            outline: 0; 
+            outline: 0;
+            height: 84px; 
 
             &:hover,
             &.active,
