--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -3,6 +3,8 @@
   border: 1px solid #b6b6b6;
   text-align: center;
   margin-top: 40px;
+  margin-bottom: 10px;
+  padding: 0 5px;
 
   .icon {
     transform: translateY(-50%);
@@ -68,3 +70,21 @@
 .feature-link:hover {
   text-decoration: none;
 }
+
+@media (max-width: 575.98px) { 
+  .feature-box {
+    height: 120px;
+  } 
+}
+
+@media (min-width: 992px) { 
+  .feature-box {
+    height: 150px;
+  } 
+ }
+
+@media (min-width: 1200px) { 
+  .feature-box {
+    height: 120px;
+  } 
+ }
