--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -44,7 +44,7 @@ header {
   .company-claim {
     background-color: $header-bg;
 
-    .container > .row {
+    .container>.row {
       height: 145px;
     }
 
@@ -53,7 +53,7 @@ header {
         margin: 0;
         font-size: 17px;
         line-height: 42px;
-        color: rgb(216,216,216);
+        color: rgb(216, 216, 216);
         font-weight: 500;
 
         i {
@@ -99,7 +99,7 @@ header {
           align-items: center;
           justify-content: flex-start;
           font-size: 14px;
-          color: rgb(224,227,237);
+          color: rgb(224, 227, 237);
           position: absolute;
           top: 50%;
           right: 0;
@@ -116,10 +116,10 @@ header {
   }
 
   .menu-bar {
-    box-shadow: 2px 3.464px 6px rgba(1,2,2,0.2);
+    box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
     background-color: #ffffff;
 
-    .container > .row {
+    .container>.row {
       height: 84px;
     }
 
@@ -136,23 +136,23 @@ header {
         li {
           list-style: none;
           align-items: stretch;
-          display:inline-block;
-          position:relative;
+          display: inline-block;
+          position: relative;
 
           ul {
-            display:block;
-            display:none;
-            position:absolute;
-            width:100%;
+            display: block;
+            display: none;
+            position: absolute;
+            width: 100%;
 
             li {
-              display:block;
+              display: block;
               background-color: $primary;
             }
           }
 
           &:hover ul {
-            display:block;
+            display: block;
           }
 
           a {
@@ -168,7 +168,7 @@ header {
             font-weight: 500;
             letter-spacing: 1px;
             outline: 0;
-            height: 84px; 
+            height: 84px;
 
             &:hover,
             &.active,
@@ -239,6 +239,31 @@ header {
           border: 0;
           background-color: transparent;
           outline: none;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 991px) {
+  header {
+
+    .menu-bar {
+
+      .container>.row {
+        height: 80px;
+      }
+
+      .menu {
+
+        ul {
+
+          li {
+
+            a {
+              height: 20px;
+            }
+          }
         }
       }
     }
