--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -242,6 +242,14 @@ header {
         }
       }
     }
+
+    .mobile-menu {
+      display: none;
+
+      a {
+        @extend .hover-animation;
+      }
+    }
   }
 }
 
@@ -252,19 +260,125 @@ header {
 
       .container>.row {
         height: 80px;
-      }
 
-      .menu {
 
-        ul {
+        .menu {
 
-          li {
+          ul {
 
-            a {
-              height: 20px;
+            li {
+
+              a {
+                height: 20px;
+              }
             }
           }
         }
+      }
+
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  header {
+
+    .menu-bar {
+
+      .container>.row {
+        height: 80px;
+        position: relative;
+
+        .menu {
+          display: none;
+        }
+
+        .mobile-menu {
+          display: inline-block;
+          width: 100px;
+          position: absolute;
+          top: -10px;
+          left: 20px;
+          font-size: 22px;
+          z-index: 1;
+
+
+
+
+
+          >ul {
+            position: absolute;
+            left: -40px;
+
+
+            li {
+              list-style-type: none;
+              box-shadow: 1px 1px 3px $text-color;
+              display: none;
+              position: relative;
+
+              a {
+                color: $text-color;
+                background-color: $active-menu-color;
+                border-left: 4px solid $active-menu-color;
+                width: 140px;
+                text-transform: uppercase;
+                font-size: 12px;
+                padding: 1rem;
+                text-decoration: none;
+                display: flex;
+                align-items: center;
+                font-weight: 500;
+                letter-spacing: 1px;
+                outline: 0;
+                height: 42px;
+
+                &:hover {
+                  color: $active-menu-color;
+                  background-color: $primary;
+                  border-left: 4px solid $text-color;
+                }
+              }
+
+              ul {
+                position: absolute;
+                top: 0;
+                left: 100px;
+
+
+              }
+            }
+
+          }
+
+
+          &:hover>ul>li {
+            display: block;
+
+
+            &:hover {
+              >a {
+                background-color: $primary;
+                color: $active-menu-color;
+                border-left: 4px solid $text-color;
+              }
+
+              >ul>li {
+                display: block;
+              }
+            }
+          }
+
+
+        }
+
+        .search-form {
+          position: absolute;
+          top: 50%;
+          left: 50px;
+          transform: translateY(-50%);
+        }
+
       }
     }
   }
