WDP181002-8 - Rename color variables

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -11,9 +11,8 @@ $text-color: #2a2a2a;
 $form-border-color: #292929;
 
 
-$full-white: #ffffff;
-$total-white: $full-white;
-$active-menu-color: $full-white;
-$menu-border-top-color: $full-white;
+$post-box-background: #ffffff;
+$active-menu-color: #ffffff;
+$menu-border-top-color: #ffffff;
 
-$grey-rgb-103:rgb(103,103,103);
+$post-info-text:rgb(103,103,103);
