WDP181002-11 Update .mobile-menu to use same font as rest of page

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -307,6 +307,7 @@ header {
 
           >ul {
             position: absolute;
+            font-family: 'Poppins', sans-serif;
             left: -40px;
 
 
