--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -80,3 +80,26 @@ footer {
     }
   }
 }
+
+@media (max-width: 575.98px) { 
+  .menu-wrapper {
+  text-align: center;  
+  }
+  
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .bottom-bar {
+    text-align: center;  
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991.98px) {  
+  .bottom-bar {
+    text-align: center;  
+  }
+}
+
