WDP181002-21 Add missing bracket

--- a/src/sass/components/_section--promo.scss
+++ b/src/sass/components/_section--promo.scss
@@ -1,6 +1,19 @@
 .section-promo {
     position: relative;
 
+    .stars {
+      a {
+        text-decoration: none;
+        color: rgb(42, 42, 42);
+        @extend .far;
+        @extend .fa-star;
+
+            &.full {
+            @extend .fas;
+            }
+        }
+    }
+
     .photo {
         &:hover {
             .counters {
