--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -19,3 +19,8 @@ $old-price-line: #000000;
 $old-price-bg: #bdbdbd;
 
 $post-info-text:rgb(103,103,103);
+
+$breakpoint-xxs: 576px; // not a Bootstrap breakpoint
+$breakpoint-sm: 768px;
+$breakpoint-md: 992px;
+$breakpoint-lg: 1200px;
