--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -1,4 +1,3 @@
-
 .feature-box {
   border: 1px solid #b6b6b6;
   text-align: center;
@@ -40,7 +39,7 @@
   .content {
     @extend .hover-animation;
     text-transform: uppercase;
-    color: rgb(42,42,42);
+    color: rgb(42, 42, 42);
     margin-top: -0.5rem;
     letter-spacing: 1px;
 
@@ -71,42 +70,43 @@
   text-decoration: none;
 }
 
-@media (max-width: 575.98px) { 
+@media (max-width: $breakpoint-xxs) {
   .feature-box {
     height: 150px;
-  } 
+  }
 }
 
-@media (min-width: 576px) {  
+@media (min-width: $breakpoint-xxs) {
   .feature-box {
     height: 120px;
-  } 
+  }
 }
 
-@media (min-width: 768px) {  
+@media (min-width: $breakpoint-sm) {
   .feature-box {
     height: 150px;
+
     h5 {
-      font-size:18px;
+      font-size: 18px;
       padding: 0 10px;
     }
+
     p {
       font-size: 0.8rem;
     }
-  } 
+  }
 }
 
-@media (min-width: 992px) {
-  .feature-box { 
+@media (min-width: $breakpoint-md) {
+  .feature-box {
     p {
       font-size: 1rem;
     }
   }
 }
 
-@media (min-width: 1199.99px) { 
+@media (min-width: $breakpoint-lg) {
   .feature-box {
     height: 120px;
-  } 
- }
- 
+  }
+}
