WDP181002-18 Update all breakpoints to use variables instead of px (excluding bootstrap classes)

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -21,3 +21,8 @@ $old-price-bg: #bdbdbd;
 $post-info-text:rgb(103,103,103);
 
 $dots-color: #e1e1e1;
+
+$breakpoint-xxs: 576px; // not a Bootstrap breakpoint
+$breakpoint-sm: 768px;
+$breakpoint-md: 992px;
+$breakpoint-lg: 1200px;
