--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -1,119 +1,123 @@
-.product-box {
-  background-color: #ffffff;
-  border: 1px solid #e1e1e1;
-  margin-bottom: 2rem;
+.product-box-space {
+  padding: 15px;
 
-  .photo {
-    position: relative;
-    padding: 80% 10px 0 10px;
+  .product-box {
+    background-color: #ffffff;
+    border: 1px solid #e1e1e1;
+    margin-bottom: 2rem;
 
-    background: {
-      color: #f4f5f7;
-      size: contain;
-      position: center;
-      repeat: no-repeat;
-    }
-
-    overflow: hidden;
-    align-items: flex-end;
-    
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: auto;
-    }
-
-    .sale {
-      position: absolute;
-      top: -30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #292929;
-      border-radius: 50%;
-      color: #ffffff;
-      padding: 30px 15px 5px 15px;
-    }
-
-    .buttons {
+    .photo {
       position: relative;
-      display: flex;
-      justify-content: space-between;
-      visibility: hidden;
+      padding: 80% 10px 0 10px;
+
+      background: {
+        color: #f4f5f7;
+        size: contain;
+        position: center;
+        repeat: no-repeat;
+      }
+
+      overflow: hidden;
+      align-items: flex-end;
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+      }
+
+      .sale {
+        position: absolute;
+        top: -30px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #292929;
+        border-radius: 50%;
+        color: #ffffff;
+        padding: 30px 15px 5px 15px;
+      }
+
+      .buttons {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        visibility: hidden;
+      }
+
+
     }
 
+    &:hover {
 
-  }
+      .buttons {
+        visibility: visible;
+      }
 
-  &:hover {
-
-    .buttons {
-      visibility: visible;
+      .price-button {
+        background-color: $primary;
+      }
     }
 
-    .price-button {
-      background-color: $primary;
-    }
-  }
+    .content {
+      text-align: center;
+      padding: 20px;
 
-  .content {
-    text-align: center;
-    padding: 20px;
+      h5 {
+        color: $primary;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 1px;
+      }
 
-    h5 {
-      color: $primary;
-      font-size: 16px;
-      line-height: 24px;
-      letter-spacing: 1px;
-    }
+      .stars {
+        a {
+          text-decoration: none;
+          color: rgb(42, 42, 42);
+          @extend .far;
+          @extend .fa-star;
 
-    .stars {
-      a {
-        text-decoration: none;
-        color: rgb(42, 42, 42);
-        @extend .far;
-        @extend .fa-star;
-
-        &.full {
-          @extend .fas;
+          &.full {
+            @extend .fas;
+          }
         }
       }
     }
-  }
 
-  .line {
-    margin: 0 10px;
-    border-bottom: 1px solid #2a2a2a;
-    position: relative;
+    .line {
+      margin: 0 10px;
+      border-bottom: 1px solid #2a2a2a;
+      position: relative;
 
-    &::before {
-      content: '';
-      position: absolute;
-      bottom: -1px;
-      left: 50%;
-      width: 30px;
-      border-bottom: 4px solid $primary;
-      transform: translateX(-50%);
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: -1px;
+        left: 50%;
+        width: 30px;
+        border-bottom: 4px solid $primary;
+        transform: translateX(-50%);
+      }
     }
-  }
 
-  .actions {
-    padding: 15px 10px 10px 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .price {
+    .actions {
+      padding: 15px 10px 10px 10px;
       display: flex;
-      flex-direction: row;
-      
-      .old-price {
-        margin-right: 5px;
-        background-color: $old-price-bg;
-        color: $old-price-line;  
-        text-decoration: line-through $old-price-line;
-        opacity: 0.7;
+      justify-content: space-between;
+      align-items: center;
+
+      .price {
+        display: flex;
+        flex-direction: row;
+
+        .old-price {
+          margin-right: 5px;
+          background-color: $old-price-bg;
+          color: $old-price-line;
+          text-decoration: line-through $old-price-line;
+          opacity: 0.7;
+        }
       }
     }
   }
