WDP181002-22 new descriprions and change of slider declaration in html

--- a/src/sass/components/_section--promo.scss
+++ b/src/sass/components/_section--promo.scss
@@ -59,6 +59,7 @@
                 
             &:hover {
                 background-color: $primary;
+                cursor: pointer;
             }
 
         }
@@ -152,6 +153,7 @@
         
         &:hover {
             background-color: $primary;
+            cursor: pointer;
         }
     }
 
@@ -170,6 +172,7 @@
 
         &:hover {
             background-color: $primary;
+            cursor: pointer;
         }
     }
 
