--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -122,3 +122,15 @@
     }
   }
 }
+
+@media screen and (max-width: $breakpoint-lg) {
+  .product-box-space {
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: $breakpoint-sm) {
+  .product-box-space {
+    padding: 5px;
+  }
+}
