WDP181002-18 Update css to lower padding of product-box-space in furniture carousel on mobiles

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -157,3 +157,15 @@
     }
   }
 }
+
+@media screen and (max-width: $breakpoint-lg) {
+  .product-box-space {
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: $breakpoint-sm) {
+  .product-box-space {
+    padding: 5px;
+  }
+}
