WDP181002-18 Modify furniture carousel 2/3 elements breakpoint in css and js from 768px to 992px

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -129,7 +129,7 @@
   }
 }
 
-@media screen and (max-width: $breakpoint-sm) {
+@media screen and (max-width: $breakpoint-md) {
   .product-box-space {
     padding: 5px;
   }
