WDP181002-19 Add JS code to freeze star rating on click.

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -102,6 +102,15 @@
             color: $primary;
           }
         }
+        &.star-full {
+          @extend .fas;
+          color: $primary;
+        }
+
+        &.star-outline {
+          @extend .far;
+          color: $primary;
+        }
 
       }
     }
