--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -1,85 +1,104 @@
-.post-box {
-  margin-bottom: 2rem;
-  
-  > a {
-    text-decoration: none;
-  }
+.post-box-space {
+  padding: 15px;
 
-  .cover {
-    position: relative;
-    padding: 70% 25px 0 25px;
-    background: {
-      color: #f4f5f7;
-      size: cover;
-      position: center;
-    }
-    overflow: hidden;
-    align-items: flex-end;
+  .post-box {
+    margin-bottom: 2rem;
 
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      max-width: 100%;
-      height: auto;
-      object-fit: fill;
+    >a {
+      text-decoration: none;
     }
 
-    .details {
+    .cover {
       position: relative;
-      padding: 15px 20px;
-      display: flex;
-      color: $text-color;
-      background-color: $post-box-background;
-      font-size: 14px;
+      padding: 70% 25px 0 25px;
 
-      & > * {
-        flex: 1 1 auto;
+      background: {
+        color: #f4f5f7;
+        size: cover;
+        position: center;
       }
 
-      .date {
-        text-align: left;
+      overflow: hidden;
+      align-items: flex-end;
+
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+        max-width: 100%;
+        height: auto;
+        object-fit: fill;
       }
 
-      .comments {
-        text-align: right;
-      }
-    }
-  }
+      .details {
+        position: relative;
+        padding: 15px 20px;
+        display: flex;
+        color: $text-color;
+        background-color: $post-box-background;
+        font-size: 14px;
 
-  .post-info {
-    padding: 25px;
+        &>* {
+          flex: 1 1 auto;
+        }
 
-    h5 {
-      color: $post-info-text;
-      font-size: 16px;
-      line-height: 24px;
-      letter-spacing: 1px;
-    }
+        .date {
+          text-align: left;
+        }
 
-    p {
-      font-size: 14px;
-      line-height: 24px;
-      color: $post-info-text;
-      text-align: justify;
-    }
-
-    .more {
-      text-align: center;
-      padding-top: 30px;
-    }
-  }
-
-  &:hover {
-    .post-info {
-      h5 {
-        color: $primary;
-      }
-      .more {
-        .btn-main {
-          background-color: $primary;
+        .comments {
+          text-align: right;
         }
       }
     }
+
+    .post-info {
+      padding: 25px;
+
+      h5 {
+        color: $post-info-text;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 1px;
+      }
+
+      p {
+        font-size: 14px;
+        line-height: 24px;
+        color: $post-info-text;
+        text-align: justify;
+      }
+
+      .more {
+        text-align: center;
+        padding-top: 30px;
+      }
+    }
+
+    &:hover {
+      .post-info {
+        h5 {
+          color: $primary;
+        }
+
+        .more {
+          .btn-main {
+            background-color: $primary;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $breakpoint-lg) {
+  .post-box-space {
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: $breakpoint-md) {
+  .post-box-space {
+    padding: 5px;
   }
 }
