--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,6 +20,7 @@
 
 @import "components/section--features";
 @import "components/section--promo";
+@import "components/section--markup";
 
 body {
   font-family: 'Poppins', sans-serif;
