--- a/src/sass/components/_section--promo.scss
+++ b/src/sass/components/_section--promo.scss
@@ -14,14 +14,6 @@
         }
     }
 
-    .photo {
-        &:hover {
-            .counters {
-            display: block;
-            }
-        }
-    }
-
     .top_header {
         width: 100%;
         position: absolute;
@@ -67,11 +59,16 @@
 }
 
 .counters {
-    display: none;
+    opacity: 0;
     position: absolute;
-    top: 40%;
+    top: 44px;
+    padding: 50px 0;
     left: 0;
     width: 100%;
+
+    &:hover {
+        opacity: 1;
+    }
 
     .btn-main-small {
         width: 50%;
