--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -1,3 +1,17 @@
+.furniture-slider {
+  opacity: 1;
+  transition: opacity 1s;
+}
+
+.furniture-slider-hidden {
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+.furniture-slider-gone {
+  display: none;
+}
+
 .product-box-space {
   padding: 15px;
 }
