WDP181002-17 - Add separate tabs with independent sliders in furniture section

--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -1,11 +1,11 @@
-.furniture-slider {
+.furniture-slider-fade {
   opacity: 1;
-  transition: opacity 1s;
+  transition: opacity 0.25s;
 }
 
 .furniture-slider-hidden {
   opacity: 0;
-  transition: opacity 1s;
+  transition: opacity 0.25s;
 }
 
 .furniture-slider-gone {
